p7/tests/t087.gpl
rectangle my_rectangle(x = 100, y = 100);

on akey
{
    print(my_rectangle);
}
